# discord-openai

./: .claudeignore  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: main.yml
src/: bot.py  button_view.py  openai_api.py  util.py
src/config/: auth.py
src/discord_openai/: __init__.py  bot.py  util.py
src/discord_openai/cogs/openai/: __init__.py  attachments.py  chat.py  client.py  cog.py  command_options.py  embeds.py  image.py  models.py  research.py  responses.py  speech.py  state.py  tool_registry.py  tooling.py  video.py  views.py
src/discord_openai/config/: __init__.py  auth.py  mcp.py  pricing.py  pricing.yaml
tests/: conftest.py  test_button_view.py  test_choice_caps.py  test_config_auth.py  test_config_pricing.py  test_embed_delivery.py  test_lazy_imports.py  test_logging_setup.py  test_openai_api.py  test_openai_api_shim.py  test_openai_chat.py  test_openai_cog.py  test_openai_embeds.py  test_openai_mcp_config.py  test_openai_responses.py  test_openai_state.py  test_openai_tooling.py  test_package_import.py  test_package_imports.py  test_util.py
